Src/BootCamp.Chapter/Examples/InterfacePolution/Good/Lesson.cs
namespace BootCamp.Chapter.Examples.InterfacePolution.Good
{
    public class Lesson
    {
    }
}