Src/BootCamp.Chapter/Examples/InterfacePolution/Bad/Lesson.cs
namespace BootCamp.Chapter.Examples.InterfacePolution.Bad
{
    public class Lesson
    {
    }
}